 # [#30125] Search module does not take into account the 'search only' selected. Thanks Brian Teeman.
 # [#30797] *Wrapper module url field should be required. Thanks Jean-Marie Simonet.
 # [#30017] Problems with calendar pop up in Chrome. Thanks Achal Aggarwal.
 # [#30800] Blog item is not rendering intro image. Thanks David Hurley.

05-May-2013 Michael Babker
 # [#30727] A unpublished or deleted tag is still visible in 'List of all tags' menu item.  Thanks David Hurley
 # [#30744] tag mappings are not deleted after a tag is deleted.  Thanks Thomas Hunziker
 # [#30566] Tag Items List Layout Background Alternating Color Bug.  Thanks Seth Warburton
 ^ [#30659] Adds html5 elements to Protostar.  Thanks Seth Warburton
 ^ [#30257] Removed colors from Icomoon named icons.  Thanks Peter van Westen
 ^ [#30816] Documentation error.  Thanks Achal Aggarwal
 ^ [#30810] Disable ReCaptcha plugin when Joomla is installed.  Thanks Nick Savov
 # [#30811] Overrides list does not have any markup.  Thanks Roland Dalmulder
 # [#30832] Joomla Updater doesn't use the bootstrap styling.  Thanks Roland Dalmulder

03-May-2013 Jean-Marie Simonet
 # [#30694] Backend toolbar buttons have forbidden attribute href. Thanks David Hurley
 #$ [#30805] *Isis: sidebar background colour issue
 # [#30103] Cannot delete web site entry for a contact. Thanks Elin Waring
 # [#30748] *Multilanguage issue with contacts. Thanks Benjamin Trenkle
 #$ [#30788] com_newsfeeds title is inconsequent in the backend.
 # [#30784] User profile plugin doesn't save the field inputs after J3.1. Thanks Elin Waring

30-Apr-2013 Jean-Marie Simonet
 # [#30488] Wrong default values for weblink icons in layout. Thanks THomas Hunziker.
 #$ [#30381] Create Folder button label - Media Manager. Thanks Glenn Arkell
 #$ [#30618] *Adding filtering by Unprotected extensions in Extensions Manager=>Manage
 # [#29922] Browser Agent Google Chrome on IOS. Thanks Brian Teeman.
 # [#30622] Queries not using JDatabase. Thanks Georges Wilson